@startuml
' avoid problems with angled crows feet
skinparam linetype ortho

package User {
entity User_Student
entity User_Educator
}

entity User_Student {
*id
--
name
urole="student"
}

entity User_Educator {
*id
--
name
urole="educator"
}

entity Thread {
*id
--
groupID
timestamp
title
}

entity Post {
*id
--
userID
threadID
timestamp
content
}

entity Group {
*id
--
name
}

entity UserGroup {
*id
--
groupID
userID
}

User_Student ||--|{ UserGroup
User_Educator ||--|{ UserGroup
Group ||--|{ UserGroup
Thread }|--|| Group
Post }|--|| Thread
Post }|--|| User_Student
Post }|--|| User_Educator

@enduml